collapsable instructions and restyling

--- a/mturk/emnlp2019.html
+++ b/mturk/emnlp2019.html
@@ -12,107 +12,126 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-<!-- Instructions -->
-<section class="col-12 my-4" id="instructions">
+<section class="col-12 my-4" id="examples" style="display: none;">
     <div class="card border-info">
         <div class="card-header bg-info text-white text-center">
-            <h5 class="m-0">Instructions</h5>
+            <h5 class="m-0">Examples</h5>
         </div>
-        <div class="card-body row">
-            <p class="d-block col-12 text-center"><em>Firstly, thanks for
-                participating in our study!</em></p>
-            <div class="col-12 col-md-6">
-                <p><strong>Description: </strong> We have machine-generated (AI)
-                    summaries of an Article. Each summary pulls from 0-2 article
-                    sentences to create the result you see.</p>
+        <div class="card-body row border-between">
+            <div id="divExampleLeft" class="col-12 col-md-6">
 
-                <p class="mb-0"><strong>What we need <em>you</em> to do:</strong></p>
-                <ol class="list">
-                    <li class="list-item">
-                        <strong>Read the entire article.</strong> (It
-                        should be a pretty quick read.)
-                    </li>
-                    <li class="list-item">
-                        Go through each the <a href="#summaries">Summaries</a>,
-                        hover over each to highlight the corresponding
-                        sentences in the article. <strong>Read each summary
-                        and answer the following questions:</strong>
-                        <ol class="list">
+            </div>
+            <div id="divExampleRight" class="col-12 col-md-6">
+
+            </div>
+    </div>
+</section>
+
+<!-- Instructions -->
+<section class="col-12 my-4" id="instructions">
+    <div>
+        <button class="btn btn-info btn-block btn-lg text-white text-center" type="button"
+            data-toggle="collapse" data-target="#instructionCollapse"
+            aria-expanded="false" aria-controls="instructionCollapse">
+            <h5 class="m-0">Instructions</h5>
+        </button>
+        <div class="collapse mt-3" id="instructionCollapse">
+            <div class="card">
+                <div class="row card-body">
+                    <!-- Actual Instructions -->
+                    <div class="col-12 col-md-6" id="actualInstructions">
+                        <p class="d-block col-12 text-center"><em>Firstly,
+                            thanks for participating in our study!</em></p>
+                        <p><strong>Description: </strong> We have machine-generated (AI)
+                            summary sentences of an Article. Each summary sentence pulls from 2 article
+                            sentences to create the result you see.</p>
+
+                        <p class="mb-0"><strong>What we need <em>you</em> to do:</strong></p>
+                        <ol>
                             <li class="list-item">
-                                Is this sentence true to the original
-                                article?
+                                <strong>Read the entire article.</strong> (It
+                                should be a pretty quick read.)
                             </li>
                             <li class="list-item">
-                                Does this sentence contain information not
-                                represented by the highlighted sentences?
-                            </li>
-                            <li class="list-item">
-                                Is this sentence grammatically correct?
+                                Go through each of the <a href="#summaries">Summary Sentences</a>,
+                                hover over each to highlight the corresponding
+                                sentences in the article. Click on the summary sentence to keep the sentences highlighted.
+                                <strong>Read each summary sentence
+                                and answer the following questions:</strong>
+                                <ol>
+                                    <li class="list-item">
+                                        <strong>Faithful:</strong> Does the summary sentence convey the same meaning as the original article?
+                                    </li>
+                                    <li class="list-item">
+                                        <strong>Coverage:</strong> Does the highlighted text contain all information used to generate the summary sentence?
+                                    </li>
+                                    <li class="list-item">
+                                        <strong>Grammatical:</strong> Is this sentence grammatically correct?
+                                    </li>
+                                    <li class="list-item">
+                                        <strong>Merging:</strong> How is the summary sentence created?
+                                        <ul type="a">
+                                            <li class="list-item">
+                                                <i>Replacement:</i> a pronoun or description of an entity in one sentence is replaced by a different description
+                                                of that entity in the other sentence.
+                                            </li>
+                                            <li class="list-item">
+                                                <i>Balanced Concatenation:</i> a consecutive part of one sentence is concatenated (linked together side-by-side)
+                                                with a consecutive part of the other sentence. The parts taken from each sentence are of similar length.
+                                            </li>
+                                            <li class="list-item">
+                                                <i>Imbalanced Concatenation:</i> similar to "Balanced Concatenation,"
+                                                but the part taken from one sentence is larger than the part taken from the other sentence.
+                                            </li>
+                                            <li class="list-item">
+                                                <i>Other:</i> all remaining cases.
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ol>
                             </li>
                         </ol>
-                    </li>
-                </ol>
-            </div>
-            <div class="col-12 col-md-6">
-                <blockquote class="blockquote border-left pl-3"
-                            style="border-width: 4px !important;">
-                    Some pairs of sentences...
-                </blockquote>
-                <p><strong>Summary: </strong> some summary </p>
-                <ol class="list">
-                    <li class="list-item">
-                        <p class="m-1 d-flex justify-content-between">
-                            <span class="d-flex flex-column justify-content-center">
-                                <strong>Is this sentence true to the
-                                    original article?</strong>
-                            </span>
-                            <span class="btn-group">
-                                <span class="btn btn-sm btn-success d-flex flex-column justify-content-center">YES</span>
-                                <span class="btn btn-sm btn-danger d-flex flex-column justify-content-center">NO</span>
-                            </span>
-                        </p>
-                        <p class="m-0">
-                            <span class="btn btn-sm btn-success">YES</span>
-                            This summary is true to the original article it's
-                            been sourced from.
-                        </p>
-                    </li>
-                    <li class="list-item">
-                        <p class="m-1 d-flex justify-content-between">
-                            <span class="d-flex flex-column justify-content-center">
-                                <strong>Does this sentence contain
-                                    information not represented by the
-                                    highlighted sentences?</strong>
-                            </span>
-                            <span class="btn-group">
-                                <span class="btn btn-sm btn-success d-flex flex-column justify-content-center">YES</span>
-                                <span class="btn btn-sm btn-danger d-flex flex-column justify-content-center">NO</span>
-                            </span>
-                        </p>
-                        <p class="m-0">
-                            <span class="btn btn-sm btn-danger">NO</span>
-                            This summary only contains information presented
-                            in the sentences cited above.
-                        </p>
-                    </li>
-                    <li class="list-item">
-                        <p class="m-1 d-flex justify-content-between">
-                            <span class="d-flex flex-column justify-content-center">
-                                <strong>Is this sentence grammatically
-                                    correct?</strong>
-                            </span>
-                            <span class="btn-group">
-                                <span class="btn btn-sm btn-success d-flex flex-column justify-content-center">YES</span>
-                                <span class="btn btn-sm btn-danger d-flex flex-column justify-content-center">NO</span>
-                            </span>
-                        </p>
-                        <p class="m-0">
-                            <span class="btn btn-sm btn-success">YES</span>
-                            This sentence is well-formed, following the rules of
-                            English grammar.
-                        </p>
-                    </li>
-                </ol>
+                    </div>
+
+                    <!-- Examples -->
+                    <div class="col-12 col-md-6" id="examples">
+                        <p class="d-block col-12 text-center"><em>Examples</em></p>
+                        <div class="accordian" id="allExamples">
+                            <!-- Example -->
+                            <div class="card">
+                                <div class="card-header p-0" id="example1">
+                                    <button class="btn btn-block btn-lg btn-link collapsed" type="button"
+                                        data-toggle="collapse" data-target="#example1body"
+                                        aria-expanded="true" aria-controls="example1body">
+                                        Example 1 (Collapsable)
+                                    </button>
+                                </div>
+                                <div id="example1body" class="collapse show" aria-labelledby="example1" data-parent="#allExamples">
+                                    <div class="card-body">
+                                        Example 1 content
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /Example -->
+                            <!-- Example -->
+                            <div class="card">
+                                <div class="card-header p-0" id="example2">
+                                    <button class="btn btn-block btn-lg btn-link collapsed" type="button"
+                                        data-toggle="collapse" data-target="#example2body"
+                                        aria-expanded="true" aria-controls="example2body">
+                                        Example 2 (Collapsable)
+                                    </button>
+                                </div>
+                                <div id="example2body" class="collapse" aria-labelledby="example2" data-parent="#allExamples">
+                                    <div class="card-body">
+                                        Example 2 content
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /Example -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -141,35 +160,59 @@
         "#d9d9d9", "#bc80bd", "#ccebc5", "#ffed6f",
     ];
 
-    function addYNQuestion(id, text, name) {
+    function addQuestion(text) {
         let wrapper = document.createElement("div");
-        wrapper.setAttribute("class", "d-md-flex mb-3 col-6");
+        wrapper.setAttribute("class", "mb-3 col-4");
 
         let keyword = document.createElement("div");
-        keyword.setAttribute("class", "p-0 m-0 col-6 d-flex flex-column text-center text-md-left");
-        let keyword_txt = document.createElement("p");
-        keyword_txt.setAttribute("class",   "mx-0 my-auto");
+        keyword.setAttribute("class", "p-0 m-0 col-12 text-center");
+
+        let keyword_txt = document.createElement("em");
+        keyword_txt.setAttribute("class", "mx-0 my-auto");
         keyword_txt.innerHTML = `${text}`;
         keyword.appendChild(keyword_txt);
+
         wrapper.appendChild(keyword);
 
+        return wrapper;
+    }
+
+    function addYNQuestion(id, text, name) {
+        let wrapper = addQuestion(text);
+
         let choices = document.createElement("div");
-        choices.setAttribute("class", "p-0 m-0 col-6 d-flex justify-content-center justify-content-md-between");
+        choices.setAttribute("class", "p-0 m-0 btn-group-vertical d-flex");
 
-        let y = document.createElement("label");
-        y.setAttribute("class", "my-auto btn btn-success btn-sm");
-        y.setAttribute("for", `Y${id}_${name}`);
-        y.innerHTML = `YES <input type="radio" id="Y${id}_${name}" name="${name}">`;
+        choices.appendChild(addQsButton("YES", "btn-success", id, name));
+        choices.appendChild(addQsButton("NO" , "btn-danger" , id, name));
 
-        let n = document.createElement("label");
-        n.setAttribute("class", "my-auto btn btn-danger btn-sm");
-        n.setAttribute("for", `N${id}_${name}`);
-        n.innerHTML = `NO <input type="radio" id="N${id}_${name}" name="${name}">`;
+        wrapper.appendChild(choices);
 
-        choices.appendChild(y);
-        choices.appendChild(n);
+        return wrapper;
+    }
 
-        wrapper.append(choices);
+    function addQsButton(text, color, id, name) {
+        let x = document.createElement("label");
+        x.setAttribute("class", `my-auto btn btn-block btn-sm ${color}`);
+        x.setAttribute("for", `${text}_${id}_${name}`);
+        x.innerHTML = `${text} <input type="radio" id="${text}_${id}_${name}" name="${name}">`;
+
+        return x;
+    }
+
+    function addMultiQuest(id, text, name) {
+        let wrapper = addQuestion(text);
+        wrapper.setAttribute("class", "mb-3 col-12");
+
+        let choices = document.createElement("div");
+        choices.setAttribute("class", "p-0 m-0 btn-group d-flex");
+
+        choices.appendChild(addQsButton("Replacement"   , "btn-primary"  , id, name));
+        choices.appendChild(addQsButton("Bal. Concat."  , "btn-secondary", id, name));
+        choices.appendChild(addQsButton("Imbal. Concat.", "btn-info"     , id, name));
+        choices.appendChild(addQsButton("Other"         , "btn-warning"  , id, name));
+
+        wrapper.appendChild(choices);
 
         return wrapper;
     }
@@ -221,10 +264,10 @@
 
         let row = document.createElement("div");
         row.setAttribute("class", "row m-0");
-        row.appendChild(addYNQuestion(idx, "Faithfulness", `Faithfulness_${idx}`));
-        row.appendChild(addYNQuestion(idx, "Coverage",     `Coverage_${idx}`));
-        row.appendChild(addYNQuestion(idx, "Grammatical",  `Grammatical_${idx}`));
-        row.appendChild(addYNQuestion(idx, "Merging",      `Merging_${idx}`));
+        row.appendChild(addMultiQuest(idx, "Merging",             `Merging_${idx}`));
+        row.appendChild(addYNQuestion(idx, "Faithfulness",        `Faithfulness_${idx}`));
+        row.appendChild(addYNQuestion(idx, "Grammatical",         `Grammatical_${idx}`));
+        row.appendChild(addYNQuestion(idx, "Incomplete Coverage", `IncompleteCoverage_${idx}`));
 
         card.appendChild(row);
 
